# amos2022ws03-software-oscilloscope

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md  task.yml
.github/workflows/: build-backend-automation.yml  build-frontend-automation.yml  build-generator-automation.yml  ci-codeql.yml  ci-sonarqube.yml  degen-portainer-deployment.yml  deployment.yml  push-backend-automation.yml  push-frontend-automation.yml  push-generator-automation.yml  release-automation.yml  test-backend-automation.yml  test-frontend-automation.yml  test-generator-automation.yml  test-generator-codecov.yml
Apps/: docker-compose.yml  package-lock.json  package.json
Apps/backend/: .eslintrc.json  Dockerfile  README.md  docker-compose.yml  jest.config.cjs  package-lock.json  package.json
Apps/frontend/: .dockerignore  .env  .env.develop  .env.integration  .env.localhost  .env.production  .eslintrc.json  .gitignore  Dockerfile  README.md  cypress.config.js  docker-compose.yml  index.html  package-lock.json  package.json  start.sh  (+1 more)
Apps/generator/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
Apps/generator/src/: config.rs  helper.rs  lib.rs  main.rs  sample_generator.rs
Apps/generator/test/remote_listener/: Dockerfile  docker-compose.yml
Documentation/: CICD Architecture.drawio  Dataflow Diagram.drawio  README.md  Software Architecture.drawio  dataflow-diagram.drawio  demo-day-slide.pptm  openapi.yaml
Templates/: AMOS - Project Document (Template).xlsx  Team-Contract Template.odt
(+146 files in other folders)
