[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "time", "macros"] }
ndarray = "0.15.6"
dasp_signal = "0.11.0"
rand = "0.8.5"